# DIP

./: .gitignore  Makefile  README.md  pyproject.toml
dip/core/activations/: collector.py  hook.py  store.py
dip/core/methods/: conexp.py  gt_cace.py  probing_with_interventions.py  tcav.py
dip/core/models/: evaluate.py  llama.py
dip/core/probes/: __init__.py  cav.py  linear_discriminant_analysis.py  logistic_regression.py  mass_mean.py  svm.py
dip/core/separability/: calinski_harabasz_index.py  linear_model_separabiliy.py
dip/core/utils/: prompts.py  reproducibility.py
dip/core/visualization/: visualizer.py
dip/experiments/car_vs_bike/: model_evaluation.ipynb
dip/experiments/car_vs_bike/activations/: get_activations.ipynb  visualization.ipynb
dip/experiments/car_vs_bike/methods/: calculate_conexp.ipynb  calculate_gt_cace.ipynb  calculate_tcav.ipynb  get_cavs.ipynb
dip/experiments/car_vs_bike/separability/: calinski_harabasz_index.ipynb  linear_model_separability.ipynb
dip/experiments/cebab/: model_evaluation.ipynb
dip/experiments/cebab/activations/: get_activations.ipynb  visualization.ipynb
dip/experiments/cebab/dataset/: dataset_preparation.ipynb
dip/experiments/cebab/methods/: calculate_conexp.ipynb  calculate_gt_cace.ipynb  calculate_probing_with_interventions.ipynb  get_cavs.ipynb
dip/experiments/cebab/separability/: calinski_harabasz_index.ipynb  linear_model_separability.ipynb
dip/experiments/europe_vs_usa/: model_evaluation.ipynb
dip/experiments/scripts/: run_experiments.py  run_experiments_cebab.py
(+17 files in other folders)
